--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -15,6 +15,15 @@
     "noEmit": true,
     "jsx": "react-jsx",
 
+    "baseUrl": "./src",
+    "paths": {
+      "@app/*": ["app/*"],
+      "@shared/*": ["shared/*"],
+      "@entities/*": ["entities/*"],
+      "@features/*": ["features/*"],
+      "@pages/*": ["pages/*"],
+    },
+
     /* Linting */
     "strict": true,
     "noUnusedLocals": true,
